<resources>
    <string name="app_name">ProjetoTcc</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings das Telas -->
    <string name="title_activity_tela_principal">TelaPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tela_inicio">TelaInicio</string>
    <string name="title_grupo">Grupo</string>
    <string name="title_favorito">Favorito</string>
    <string name="title_perfil">Perfil</string>
    <string name="item_perfil">Perfil</string>
    <string name="item_criarGrupo">Criar grupo</string>
    <string name="item_sair">Sair</string>
    <string name="item_midia">Midia</string>

    <string name="text_integrantes">integrantes</string>

    <!-- Tela recuperar senha-->
    <string name="text_recuperar_senha">Recuperar senha</string>
    <string name="digite_email_rec">Digite seu email</string>
    <string name="btn_enviar_senha">Enviar</string>

    <!--Tela Login-->
    <string name="study">Study</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_login">Login</string>
    <string name="text_esqueci_senha">Esqueci senha</string>

    <!-- Tela cadastrar usuario-->
    <string name="text_criar_usuario">Criar usuário</string>
    <string name="text_nome">Nome</string>
    <string name="text_sobrenome">Sobrenome</string>
    <string name="text_senha">Senha</string>
    <string name="edit_senha" />
    <string name="text_curso">Curso</string>
    <string name="edit_curso" />
    <string name="text_semestre">Semestre</string>
    <string name="edit_semestre" />
    <string name="btn_salvar">Salvar</string>
    <string name="txtEmail">Email</string>
    <string name="editEmail" />
    <string name="text_confima_senha">Confima Senha</string>
    <string name="text" />
    <string name="edit_confirma_senha" />

    <!-- Tela Criar curso-->
    <string name="text_criar_grupo">Criar Grupo</string>
    <string name="text_nome_grupo">Nome do grupo</string>
    <string name="edit_nome_grupo" />
    <string name="text_nome_materia">Nome da matéria</string>
    <string name="text_status">Status</string>
    <string name="rbn_privado">Privado</string>
    <string name="rbn_publico">Público</string>
    <string name="text_adicionar_foto">Adicionar Foto</string>

    <!-- Telas Fragment perfil -->
    <string name="Editar">Editar</string>
    <string name="hint_perfilNome">Nome</string>
    <string name="hint_perfilEmail">Email</string>
    <string name="hint_perfilCurso">Curso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
