<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <item android:id="@+id/item_setting"
        android:title="@string/item_perfil"
        android:orderInCategory="100" app:showAsAction="never"/>

    <item android:id="@+id/item_criarGrupo"
        android:title="@string/item_criarGrupo"
        android:orderInCategory="100" app:showAsAction="never"/>

    <item android:id="@+id/item_sair"
        android:title="@string/item_sair"
        android:orderInCategory="200" app:showAsAction="never"/>

    <item android:id="@+id/item_pesquisar"
        android:title="Pesquisar"
        android:orderInCategory="300"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom"
        android:icon="@drawable/ic_search"
        />

    <item android:id="@+id/item_midia"
        android:title="@string/item_midia"
        android:orderInCategory="300" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_attach_file"/>



</menu>