<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadUsuarioActivity">


    <TextView
        android:id="@+id/textViewCriarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_criar_usuario"
        android:theme="@style/MyTextTheme"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/text_nome"
        android:theme="@style/MyTextTheme"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editNome"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:theme="@style/MyEditTextTheme"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSobrenome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sobrenome"
        android:theme="@style/MyTextTheme"
        app:layout_constraintStart_toStartOf="@+id/editNome"
        app:layout_constraintTop_toBottomOf="@+id/editNome" />

    <EditText
        android:id="@+id/editSobrenome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:theme="@style/MyEditTextTheme"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSobrenome" />

    <TextView
        android:id="@+id/textSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_senha"
        android:theme="@style/MyTextTheme"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/edit_senha"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSenha" />

    <TextView
        android:id="@+id/textViewInstituicao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_instituicao"
        android:theme="@style/MyTextTheme"
        app:layout_constraintStart_toStartOf="@+id/editConfirmaSenha"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmaSenha" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:theme="@style/MyEditTextTheme"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_instituicao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewInstituicao" />

    <TextView
        android:id="@+id/textViewSemestre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_semestre"
        android:theme="@style/MyTextTheme"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editSemestre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:theme="@style/MyEditTextTheme"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_semestre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSemestre" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:theme="@style/botaopadrao"
        android:text="@string/btn_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSemestre" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEmail"
        android:theme="@style/MyTextTheme"
        app:layout_constraintStart_toStartOf="@+id/editSobrenome"
        app:layout_constraintTop_toBottomOf="@+id/editSobrenome" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:theme="@style/MyEditTextTheme"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewConfimeSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_confima_senha"
        android:theme="@style/MyTextTheme"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:text="Confima senha" />

    <EditText
        android:id="@+id/editConfirmaSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/edit_confirma_senha"
        android:theme="@style/MyEditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConfimeSenha" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>