<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fundo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_x="59dp"
        android:layout_y="77dp"
        android:drawableRight="@drawable/plus"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/study"
        android:textColor="#FF00AF97"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="sans"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="91dp" />

    <EditText
        android:id="@+id/login"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_x="44dp"
        android:layout_y="219dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/login"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="235dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_x="44dp"
        android:layout_y="289dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="295dp" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_x="61dp"
        android:layout_y="414dp"
        android:onClick="cadastrar"
        android:text="@string/cadastrar"
        android:textColor="#FF00AF97"
        android:textStyle="bold"
        tools:ignore="OnClick"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="436dp" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_x="191dp"
        android:layout_y="414dp"
        android:onClick="entrar"
        android:text="@string/entrar"
        android:textColor="#FF00AF97"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnCadastrar"
        tools:ignore="OnClick"
        tools:layout_editor_absoluteY="436dp" />

    <TextView
        android:id="@+id/esqueciSenha"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_x="48dp"
        android:layout_y="344dp"
        android:text="@string/esqueciSenha"
        android:textColor="#FF00AF97"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="370dp" />

</AbsoluteLayout>