<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PerfilFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="164dp"
            android:layout_height="141dp"
            android:layout_marginTop="132dp"
            android:src="@android:drawable/sym_def_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_perfilNome"
            android:layout_width="401dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="36dp"
            android:hint="@string/hint_perfilNome"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_perfilEmail"
            android:layout_width="401dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_perfilEmail"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_perfilNome"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_perfilCurso"
            android:layout_width="401dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_perfilCurso"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_perfilEmail"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/editarPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="40dp"
            android:text="@string/Editar"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>